--- a/Project_YelpCamp/views/campgrounds/index.ejs
+++ b/Project_YelpCamp/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<% include ../partials/header %> 
  <div class="container">
      <header class="jumbotron">
          <div class="container">
@@ -19,7 +19,7 @@
                        <h4><%= campground.name %></h4>
                    </div>
                    <p>
-                        <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">More info</a>
+                       <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
                    </p>
                 </div>
             </div>
